ExpressoesParser.py
# Generated from Expressoes.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ExpressoesParser ( Parser ):

    grammarFileName = "Expressoes.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'CREATE'", "'SELECT'", "'INSERT'", "'UPDATE'", 
                     "'DELETE'", "'CLEAR'", "'SHOW'", "'FROM'", "'WHERE'", 
                     "'SET'", "'INTO'", "'VALUES'", "'AND'", "'OR'", "'='", 
                     "'!='", "'>'", "'<'", "','", "';'", "'('", "')'" ]

    symbolicNames = [ "<INVALID>", "CREATE", "SELECT", "INSERT", "UPDATE", 
                      "DELETE", "CLEAR", "SHOW", "FROM", "WHERE", "SET", 
                      "INTO", "VALUES", "AND", "OR", "EQ", "NEQ", "GT", 
                      "LT", "COMMA", "PV", "LPAR", "RPAR", "ID", "NUM", 
                      "STRING", "WS" ]

    RULE_prog = 0
    RULE_stmt = 1
    RULE_createStmt = 2
    RULE_selectStmt = 3
    RULE_insertStmt = 4
    RULE_updateStmt = 5
    RULE_deleteItemStmt = 6
    RULE_deleteTableStmt = 7
    RULE_clearStmt = 8
    RULE_showStmt = 9
    RULE_columns = 10
    RULE_values = 11
    RULE_assignments = 12
    RULE_assignment = 13
    RULE_condition = 14
    RULE_value = 15
    RULE_table = 16

    ruleNames =  [ "prog", "stmt", "createStmt", "selectStmt", "insertStmt", 
                   "updateStmt", "deleteItemStmt", "deleteTableStmt", "clearStmt", 
                   "showStmt", "columns", "values", "assignments", "assignment", 
                   "condition", "value", "table" ]

    EOF = Token.EOF
    CREATE=1
    SELECT=2
    INSERT=3
    UPDATE=4
    DELETE=5
    CLEAR=6
    SHOW=7
    FROM=8
    WHERE=9
    SET=10
    INTO=11
    VALUES=12
    AND=13
    OR=14
    EQ=15
    NEQ=16
    GT=17
    LT=18
    COMMA=19
    PV=20
    LPAR=21
    RPAR=22
    ID=23
    NUM=24
    STRING=25
    WS=26

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExpressoesParser.StmtContext)
            else:
                return self.getTypedRuleContext(ExpressoesParser.StmtContext,i)


        def getRuleIndex(self):
            return ExpressoesParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)




    def prog(self):

        localctx = ExpressoesParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 35 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 34
                self.stmt()
                self.state = 37 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 254) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def createStmt(self):
            return self.getTypedRuleContext(ExpressoesParser.CreateStmtContext,0)


        def selectStmt(self):
            return self.getTypedRuleContext(ExpressoesParser.SelectStmtContext,0)


        def insertStmt(self):
            return self.getTypedRuleContext(ExpressoesParser.InsertStmtContext,0)


        def updateStmt(self):
            return self.getTypedRuleContext(ExpressoesParser.UpdateStmtContext,0)


        def deleteItemStmt(self):
            return self.getTypedRuleContext(ExpressoesParser.DeleteItemStmtContext,0)


        def deleteTableStmt(self):
            return self.getTypedRuleContext(ExpressoesParser.DeleteTableStmtContext,0)


        def clearStmt(self):
            return self.getTypedRuleContext(ExpressoesParser.ClearStmtContext,0)


        def showStmt(self):
            return self.getTypedRuleContext(ExpressoesParser.ShowStmtContext,0)


        def getRuleIndex(self):
            return ExpressoesParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)




    def stmt(self):

        localctx = ExpressoesParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stmt)
        try:
            self.state = 47
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 39
                self.createStmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 40
                self.selectStmt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 41
                self.insertStmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 42
                self.updateStmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 43
                self.deleteItemStmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 44
                self.deleteTableStmt()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 45
                self.clearStmt()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 46
                self.showStmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CreateStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CREATE(self):
            return self.getToken(ExpressoesParser.CREATE, 0)

        def table(self):
            return self.getTypedRuleContext(ExpressoesParser.TableContext,0)


        def PV(self):
            return self.getToken(ExpressoesParser.PV, 0)

        def getRuleIndex(self):
            return ExpressoesParser.RULE_createStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCreateStmt" ):
                listener.enterCreateStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCreateStmt" ):
                listener.exitCreateStmt(self)




    def createStmt(self):

        localctx = ExpressoesParser.CreateStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_createStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self.match(ExpressoesParser.CREATE)
            self.state = 50
            self.table()
            self.state = 51
            self.match(ExpressoesParser.PV)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SelectStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SELECT(self):
            return self.getToken(ExpressoesParser.SELECT, 0)

        def columns(self):
            return self.getTypedRuleContext(ExpressoesParser.ColumnsContext,0)


        def FROM(self):
            return self.getToken(ExpressoesParser.FROM, 0)

        def table(self):
            return self.getTypedRuleContext(ExpressoesParser.TableContext,0)


        def PV(self):
            return self.getToken(ExpressoesParser.PV, 0)

        def WHERE(self):
            return self.getToken(ExpressoesParser.WHERE, 0)

        def condition(self):
            return self.getTypedRuleContext(ExpressoesParser.ConditionContext,0)


        def getRuleIndex(self):
            return ExpressoesParser.RULE_selectStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelectStmt" ):
                listener.enterSelectStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelectStmt" ):
                listener.exitSelectStmt(self)




    def selectStmt(self):

        localctx = ExpressoesParser.SelectStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_selectStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self.match(ExpressoesParser.SELECT)
            self.state = 54
            self.columns()
            self.state = 55
            self.match(ExpressoesParser.FROM)
            self.state = 56
            self.table()
            self.state = 59
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==9:
                self.state = 57
                self.match(ExpressoesParser.WHERE)
                self.state = 58
                self.condition()


            self.state = 61
            self.match(ExpressoesParser.PV)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InsertStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INSERT(self):
            return self.getToken(ExpressoesParser.INSERT, 0)

        def INTO(self):
            return self.getToken(ExpressoesParser.INTO, 0)

        def table(self):
            return self.getTypedRuleContext(ExpressoesParser.TableContext,0)


        def LPAR(self, i:int=None):
            if i is None:
                return self.getTokens(ExpressoesParser.LPAR)
            else:
                return self.getToken(ExpressoesParser.LPAR, i)

        def columns(self):
            return self.getTypedRuleContext(ExpressoesParser.ColumnsContext,0)


        def RPAR(self, i:int=None):
            if i is None:
                return self.getTokens(ExpressoesParser.RPAR)
            else:
                return self.getToken(ExpressoesParser.RPAR, i)

        def VALUES(self):
            return self.getToken(ExpressoesParser.VALUES, 0)

        def values(self):
            return self.getTypedRuleContext(ExpressoesParser.ValuesContext,0)


        def PV(self):
            return self.getToken(ExpressoesParser.PV, 0)

        def getRuleIndex(self):
            return ExpressoesParser.RULE_insertStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInsertStmt" ):
                listener.enterInsertStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInsertStmt" ):
                listener.exitInsertStmt(self)




    def insertStmt(self):

        localctx = ExpressoesParser.InsertStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_insertStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self.match(ExpressoesParser.INSERT)
            self.state = 64
            self.match(ExpressoesParser.INTO)
            self.state = 65
            self.table()
            self.state = 66
            self.match(ExpressoesParser.LPAR)
            self.state = 67
            self.columns()
            self.state = 68
            self.match(ExpressoesParser.RPAR)
            self.state = 69
            self.match(ExpressoesParser.VALUES)
            self.state = 70
            self.match(ExpressoesParser.LPAR)
            self.state = 71
            self.values()
            self.state = 72
            self.match(ExpressoesParser.RPAR)
            self.state = 73
            self.match(ExpressoesParser.PV)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UpdateStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def UPDATE(self):
            return self.getToken(ExpressoesParser.UPDATE, 0)

        def table(self):
            return self.getTypedRuleContext(ExpressoesParser.TableContext,0)


        def SET(self):
            return self.getToken(ExpressoesParser.SET, 0)

        def assignments(self):
            return self.getTypedRuleContext(ExpressoesParser.AssignmentsContext,0)


        def PV(self):
            return self.getToken(ExpressoesParser.PV, 0)

        def WHERE(self):
            return self.getToken(ExpressoesParser.WHERE, 0)

        def condition(self):
            return self.getTypedRuleContext(ExpressoesParser.ConditionContext,0)


        def getRuleIndex(self):
            return ExpressoesParser.RULE_updateStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUpdateStmt" ):
                listener.enterUpdateStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUpdateStmt" ):
                listener.exitUpdateStmt(self)




    def updateStmt(self):

        localctx = ExpressoesParser.UpdateStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_updateStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(ExpressoesParser.UPDATE)
            self.state = 76
            self.table()
            self.state = 77
            self.match(ExpressoesParser.SET)
            self.state = 78
            self.assignments()
            self.state = 81
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==9:
                self.state = 79
                self.match(ExpressoesParser.WHERE)
                self.state = 80
                self.condition()


            self.state = 83
            self.match(ExpressoesParser.PV)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeleteItemStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DELETE(self):
            return self.getToken(ExpressoesParser.DELETE, 0)

        def FROM(self):
            return self.getToken(ExpressoesParser.FROM, 0)

        def table(self):
            return self.getTypedRuleContext(ExpressoesParser.TableContext,0)


        def PV(self):
            return self.getToken(ExpressoesParser.PV, 0)

        def WHERE(self):
            return self.getToken(ExpressoesParser.WHERE, 0)

        def condition(self):
            return self.getTypedRuleContext(ExpressoesParser.ConditionContext,0)


        def getRuleIndex(self):
            return ExpressoesParser.RULE_deleteItemStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeleteItemStmt" ):
                listener.enterDeleteItemStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeleteItemStmt" ):
                listener.exitDeleteItemStmt(self)




    def deleteItemStmt(self):

        localctx = ExpressoesParser.DeleteItemStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_deleteItemStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.match(ExpressoesParser.DELETE)
            self.state = 86
            self.match(ExpressoesParser.FROM)
            self.state = 87
            self.table()
            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==9:
                self.state = 88
                self.match(ExpressoesParser.WHERE)
                self.state = 89
                self.condition()


            self.state = 92
            self.match(ExpressoesParser.PV)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeleteTableStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DELETE(self):
            return self.getToken(ExpressoesParser.DELETE, 0)

        def table(self):
            return self.getTypedRuleContext(ExpressoesParser.TableContext,0)


        def PV(self):
            return self.getToken(ExpressoesParser.PV, 0)

        def getRuleIndex(self):
            return ExpressoesParser.RULE_deleteTableStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeleteTableStmt" ):
                listener.enterDeleteTableStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeleteTableStmt" ):
                listener.exitDeleteTableStmt(self)




    def deleteTableStmt(self):

        localctx = ExpressoesParser.DeleteTableStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_deleteTableStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(ExpressoesParser.DELETE)
            self.state = 95
            self.table()
            self.state = 96
            self.match(ExpressoesParser.PV)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClearStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLEAR(self):
            return self.getToken(ExpressoesParser.CLEAR, 0)

        def table(self):
            return self.getTypedRuleContext(ExpressoesParser.TableContext,0)


        def PV(self):
            return self.getToken(ExpressoesParser.PV, 0)

        def getRuleIndex(self):
            return ExpressoesParser.RULE_clearStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClearStmt" ):
                listener.enterClearStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClearStmt" ):
                listener.exitClearStmt(self)




    def clearStmt(self):

        localctx = ExpressoesParser.ClearStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_clearStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.match(ExpressoesParser.CLEAR)
            self.state = 99
            self.table()
            self.state = 100
            self.match(ExpressoesParser.PV)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ShowStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SHOW(self):
            return self.getToken(ExpressoesParser.SHOW, 0)

        def table(self):
            return self.getTypedRuleContext(ExpressoesParser.TableContext,0)


        def PV(self):
            return self.getToken(ExpressoesParser.PV, 0)

        def getRuleIndex(self):
            return ExpressoesParser.RULE_showStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterShowStmt" ):
                listener.enterShowStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitShowStmt" ):
                listener.exitShowStmt(self)




    def showStmt(self):

        localctx = ExpressoesParser.ShowStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_showStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 102
            self.match(ExpressoesParser.SHOW)
            self.state = 103
            self.table()
            self.state = 104
            self.match(ExpressoesParser.PV)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ColumnsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(ExpressoesParser.ID)
            else:
                return self.getToken(ExpressoesParser.ID, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(ExpressoesParser.COMMA)
            else:
                return self.getToken(ExpressoesParser.COMMA, i)

        def getRuleIndex(self):
            return ExpressoesParser.RULE_columns

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterColumns" ):
                listener.enterColumns(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitColumns" ):
                listener.exitColumns(self)




    def columns(self):

        localctx = ExpressoesParser.ColumnsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_columns)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(ExpressoesParser.ID)
            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==19:
                self.state = 107
                self.match(ExpressoesParser.COMMA)
                self.state = 108
                self.match(ExpressoesParser.ID)
                self.state = 113
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValuesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExpressoesParser.ValueContext)
            else:
                return self.getTypedRuleContext(ExpressoesParser.ValueContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(ExpressoesParser.COMMA)
            else:
                return self.getToken(ExpressoesParser.COMMA, i)

        def getRuleIndex(self):
            return ExpressoesParser.RULE_values

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValues" ):
                listener.enterValues(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValues" ):
                listener.exitValues(self)




    def values(self):

        localctx = ExpressoesParser.ValuesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_values)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.value()
            self.state = 119
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==19:
                self.state = 115
                self.match(ExpressoesParser.COMMA)
                self.state = 116
                self.value()
                self.state = 121
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExpressoesParser.AssignmentContext)
            else:
                return self.getTypedRuleContext(ExpressoesParser.AssignmentContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(ExpressoesParser.COMMA)
            else:
                return self.getToken(ExpressoesParser.COMMA, i)

        def getRuleIndex(self):
            return ExpressoesParser.RULE_assignments

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignments" ):
                listener.enterAssignments(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignments" ):
                listener.exitAssignments(self)




    def assignments(self):

        localctx = ExpressoesParser.AssignmentsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_assignments)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.assignment()
            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==19:
                self.state = 123
                self.match(ExpressoesParser.COMMA)
                self.state = 124
                self.assignment()
                self.state = 129
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ExpressoesParser.ID, 0)

        def EQ(self):
            return self.getToken(ExpressoesParser.EQ, 0)

        def value(self):
            return self.getTypedRuleContext(ExpressoesParser.ValueContext,0)


        def getRuleIndex(self):
            return ExpressoesParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)




    def assignment(self):

        localctx = ExpressoesParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(ExpressoesParser.ID)
            self.state = 131
            self.match(ExpressoesParser.EQ)
            self.state = 132
            self.value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ExpressoesParser.ID, 0)

        def value(self):
            return self.getTypedRuleContext(ExpressoesParser.ValueContext,0)


        def EQ(self):
            return self.getToken(ExpressoesParser.EQ, 0)

        def NEQ(self):
            return self.getToken(ExpressoesParser.NEQ, 0)

        def GT(self):
            return self.getToken(ExpressoesParser.GT, 0)

        def LT(self):
            return self.getToken(ExpressoesParser.LT, 0)

        def AND(self):
            return self.getToken(ExpressoesParser.AND, 0)

        def condition(self):
            return self.getTypedRuleContext(ExpressoesParser.ConditionContext,0)


        def OR(self):
            return self.getToken(ExpressoesParser.OR, 0)

        def getRuleIndex(self):
            return ExpressoesParser.RULE_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition" ):
                listener.enterCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition" ):
                listener.exitCondition(self)




    def condition(self):

        localctx = ExpressoesParser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_condition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.match(ExpressoesParser.ID)
            self.state = 135
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 491520) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 136
            self.value()
            self.state = 141
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [13]:
                self.state = 137
                self.match(ExpressoesParser.AND)
                self.state = 138
                self.condition()
                pass
            elif token in [14]:
                self.state = 139
                self.match(ExpressoesParser.OR)
                self.state = 140
                self.condition()
                pass
            elif token in [20]:
                pass
            else:
                pass
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUM(self):
            return self.getToken(ExpressoesParser.NUM, 0)

        def ID(self):
            return self.getToken(ExpressoesParser.ID, 0)

        def STRING(self):
            return self.getToken(ExpressoesParser.STRING, 0)

        def getRuleIndex(self):
            return ExpressoesParser.RULE_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValue" ):
                listener.enterValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValue" ):
                listener.exitValue(self)




    def value(self):

        localctx = ExpressoesParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_value)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 58720256) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ExpressoesParser.ID, 0)

        def getRuleIndex(self):
            return ExpressoesParser.RULE_table

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTable" ):
                listener.enterTable(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTable" ):
                listener.exitTable(self)




    def table(self):

        localctx = ExpressoesParser.TableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_table)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 145
            self.match(ExpressoesParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





